# t20usbnarf

./: README.md
c/: Makefile  Makefile.am  bluetored.pcap  config.status  configure  configure.ac
c/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
c/src/: Makefile  Makefile.am  Makefile.in  beamer.c  beamer.h  debugutil.h  image.c  image.h  main.c  options.ggo  slide.c  slide.h  t20_init.h  usbnarf.h
c/src/.deps/: slidenarf-beamer.Po  slidenarf-image.Po  slidenarf-main.Po  slidenarf-slide.Po
doc/: 99-aiptek-t20.rules  commands.md
kernel/: Makefile  initmagic_t20aiptek.h  usb_t20aiptek_fb.c
python/: create_c_header.py  gif.py  gstvideo.py  initdata.py  slideshow.py  t20.py  t20test.py  test.py
usbsniffed/: attach-nr147-andontoblue.pcap  on_to_blue.pcap  t20_off_from_red.pcap  t20switchontored.pcap
